module/core/derive_tools/tests/inc/index/compiletime/struct.rs
use derive_tools::Index;

#[ derive( Index ) ] 
struct StructMultipleNamed< T > 
{
  #[ index ]
  a: Vec< T >,
  #[ index ]
  b : Vec< T >,
}

fn main()
{  
}
